<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/moban"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="mingrisoft.maobu.maobu.Zhongduan2">

    <TextView
        android:text="@string/xuanzeshijian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@drawable/black"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner" />

    <Button
        android:text="查询（使用刷新查询功能同时也可以点击按钮进行普通查询）"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Sendbtn" />

    <TextView
        android:text="选择的刷新时间"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView22"
        android:textColor="@drawable/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2" />

    <Button
        android:text="启用刷新（若要更改刷新时间和时间间隔请在更改后重新点击）"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:text="APP接收日期："
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView23"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="APP接收时间："
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView28"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="@string/wendu1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:text="@string/wenduzhi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="@string/riqi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="@string/shijian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="@string/wendu2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textView12"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:text="@string/wenduzhi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/textView11"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="@string/riqi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="@string/shijian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="@string/wendu3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:text="@string/wenduzhi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="@string/riqi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView17"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="@string/shijian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView34"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="@string/wendu4"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView33"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:text="@string/wenduzhi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView39"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="@string/riqi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView38"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="@string/shijian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView40"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="@string/wendu5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textView41"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:text="@string/wenduzhi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView42"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="@string/riqi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView43"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="@string/shijian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView45"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:text="终端状态："
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView18"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />


</LinearLayout>
</ScrollView>
